Help Page - ScrollUp button issue on IE8

--- a/docroot/css/site/mdo/vv_styles.css
+++ b/docroot/css/site/mdo/vv_styles.css
@@ -292,9 +292,12 @@ div#iconpromo2{
 	width: 40px;
 	height: 40px;
 	border: 1px solid rgba(20,30,40,.20);
+	border: 1px solid rgb(208,210,212)\9; /* IE 8 and below */
 	border-radius: 5px;
 	background-color: rgba(20,30,40,.3);
+	background-color: rgb(208,210,212)\9; /* IE 8 and below */
 	background-position: -9px -134px;
+	background-position: -38px -290px \9; /* IE 8 and below */
 	content: "";
 }
 
